# edna

./: .gitignore  CMakeLists.txt  README.md
resources/tts/: edna_tts_worker.py
src/: asr_whisper.cpp  asr_whisper.hpp  llm_llama.cpp  llm_llama.hpp  main.cpp  state_machine.cpp  state_machine.hpp  tts_coqui.cpp  tts_coqui.hpp
tools/: xtts_worker.py
